# vscope_serial

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.github/workflows/: windows-release.yml
docs/: CONTEXT.md  FIXME.md  HISTORY.md  TODO.md
kimi_doc/: CONTEXT.md  FIXME.md  icons.md
lib/: main.dart
lib/services/: address_profile_csv_importer.dart  app_info.dart  app_notifications.dart  app_settings.dart  changelog_service.dart  native_serial_reader.dart  serial_service.dart  time_window_aggregator.dart  update_checker.dart  zobow_c_profile_importer.dart  zobow_profile_service.dart
lib/viewmodels/: base_viewmodel.dart  connect_viewmodel.dart  plot_viewmodel.dart  protocol_viewmodel.dart  raw_data_viewmodel.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
test/parser/: fixed_frame_parser_test.dart  jack_four_channel_parser_test.dart  just_float_parser_test.dart  zobow_parser_test.dart
test/services/: address_profile_csv_importer_test.dart  changelog_service_test.dart  serial_service_connection_test.dart  serial_service_raw_data_test.dart  update_checker_test.dart  zobow_c_profile_importer_test.dart
test/viewmodels/: plot_viewmodel_rate_test.dart  plot_viewmodel_test.dart  (+2 more)
test_tools/: README.md  generate_plot_bin.py  jack_four_channel_device.py  justfloat_device.py  zobow_c_profile_import.dart  zobow_device.py
tools/: build_release.py
windows/: CMakeLists.txt
windows/native_serial_reader/: CMakeLists.txt  native_serial_reader.cpp  native_serial_reader.h
(+56 files in other folders)
